--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,11 @@
-$test: blue;
+* {
+  --test: blue;
+}
+
+html, body {
+    background-color: #333;
+}
 
 li {
-    list-style-type: none;
+  list-style-type: none;
 }
