--- a/src/components/Square/square.scss
+++ b/src/components/Square/square.scss
@@ -4,6 +4,8 @@ button {
   height: 40px;
   border: 1px solid var(--background-light);
   position: relative;
+  margin-top: 0;
+  padding-top: 0;
   &:hover,
   &:focus {
     border: 1px solid var(--color-cancel);
