Fixed buttons moving when active

--- a/src/components/Board/board.scss
+++ b/src/components/Board/board.scss
@@ -8,6 +8,9 @@
   #board {
     grid-area: board;
     :global {
+      .row {
+        display: flex;
+      }
       .row:nth-child(6n) button {
         border-top-width: 3px;
       }
