Split up some more components and added some styling

--- a/src/components/Board/board.scss
+++ b/src/components/Board/board.scss
@@ -19,7 +19,9 @@
       }
     }
   }
-  #board-footer {
-    grid-area: boardfooter;
+  :global {
+    #board-footer {
+      grid-area: boardfooter;
+    }
   }
 }
