First attempt at setting the square size bazed on available space

--- a/src/components/Board/board.scss
+++ b/src/components/Board/board.scss
@@ -5,6 +5,7 @@
     "blank columnheader"
     "rowheader board"
     "boardfooter boardfooter";
+  grid-template-columns: auto 1fr;
   #board {
     grid-area: board;
     :global {
