--- a/src/components/Settings/settings.scss
+++ b/src/components/Settings/settings.scss
@@ -1,4 +1,27 @@
 .game-settings {
-  display: flex;
-  flex-direction: column;
+  .presets {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.25rem;
+    button {
+      display: block;
+      height: 40px;
+    }
+  }
+  form {
+    margin-top: .25rem;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-between;
+    gap: .25rem;
+    input {
+      height: 40px;
+      text-align: center;
+      flex: 1;
+    }
+    button {
+      flex: 0 0 100%;
+      height: 40px;
+    }
+  }
 }
