--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,8 @@
   --background: #151d26;
   --background-light: #3f5772;
   --color-cancel: #723f3f;
+  --color-text: #FFF;
+  --color-disabled: #424242;
 }
 
 html,
