--- a/src/components/Margins/marginNumber.scss
+++ b/src/components/Margins/marginNumber.scss
@@ -6,7 +6,7 @@
   border: none;
   position: relative;
   color: var(--color-text);
-  font-size: .75rem;
+  font-size: 0.75rem;
   &.column {
     width: 100%;
     height: 1.25em;
@@ -17,10 +17,14 @@
   }
   &.crossed-out {
     color: var(--color-disabled);
-    &::after {
-      content: "X";
+  }
+  :global {
+    svg {
+      stroke-width: 1rem;
       color: var(--color-disabled);
       position: absolute;
+      width: 10px;
+      height: 10px;
     }
   }
 }
