--- a/src/components/Square/square.scss
+++ b/src/components/Square/square.scss
@@ -5,7 +5,7 @@ button {
   border: 1px solid var(--background-light);
   position: relative;
   margin-top: 0;
-  padding-top: 0;
+  padding: 0;
   &:hover,
   &:focus {
     border: 1px solid var(--color-cancel);
@@ -16,27 +16,23 @@ button {
       content: "";
       background-color: var(--background-light);
       position: absolute;
-      width: 92%;
-      height: 92%;
-      left: 4%;
-      top: 4%;
+      width: calc(100% - 4px);
+      height: calc(100% - 4px);
+      top: 2px;
+      left: 2px;
     }
   }
-  &.excluded {
-    &:after {
-      display: inline-block;
-      content: "\00d7";
-      font-size: 2rem;
-      line-height: 2rem;
+  :global {
+    svg {
+      stroke-width: 1rem;
+      width: 80%;
+      height: 80%;
       color: var(--color-cancel);
       position: absolute;
       left: 0;
       right: 0;
       top: 0;
       bottom: 0;
-      text-align: center;
-      vertical-align: center;
-      line-height: 100%;
       margin: auto;
     }
   }
